k8s/dev/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
  namespace: social-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          image: mayukh551/post:latest
          imagePullPolicy: IfNotPresent
      #     volumeMounts:
      #       - name: post-persistent-storage
      #         mountPath: /var/lib/postgresql/data

      # volumes:
      #   - name: post-persistent-storage
      #     persistentVolumeClaim:
      #       claimName: pvc-postgres

---
apiVersion: v1
kind: Service
metadata:
  name: post-srv
  namespace: social-app-dev
spec:
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 5002
      targetPort: 5002
