k8s/dev/postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-depl
  namespace: social-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: Always
---
# ClusterIP service
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
  namespace: social-app-dev
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
