k8s/dev/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
  namespace: social-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: mayukh551/user:latest
          imagePullPolicy: IfNotPresent

---
# Cluster IP service for user service
apiVersion: v1
kind: Service
metadata:
  name: user-srv
  namespace: social-app-dev
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 5001
      targetPort: 5001
